tests/baselines/reference/ES5For-of12.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of12.ts(1,1): error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of12.ts (1 errors) ====
    for ([""] of []) { }
    ~~~
!!! error TS2482: 'for...of' statements are only available when targeting ECMAScript 6 or higher.